# Tetris_SFML

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  configGlobal.hpp  factoryTetrominos.hpp  playfield.hpp  square.hpp  statemachine.hpp  tetrisPieces.hpp  tetrominos.hpp
main/: main.cpp
src/: CMakeLists.txt  factoryTetrominos.cpp  playfield.cpp  square.cpp  tetrisPieces.cpp  tetrominos.cpp
